--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
+Distributions = "0.25"
 julia = "1.7"
 
 [extras]
