--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,8 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
+Survival = "8a913413-2070-5976-9d4c-2b364fdc2f7f"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
@@ -17,6 +19,8 @@ DataFrames = "1"
 Distributions = "0.25"
 Revise = "3"
 StatsBase = "0.33"
+StatsModels = "0.6"
+Survival = "0.2"
 YAML = "0.4"
 julia = "1.7"
 
