--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
-CSV = "0.9"
+CSV = "0.9, 0.10"
 DataFrames = "1"
 Distributions = "0.25"
 Revise = "3"
